--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -4,6 +4,8 @@ on:
     branches: [ master ]
 jobs:
   build:
+    env:
+      KUBECONFIG: '${{ github.workspace }}/.kube/pod-kubeconfig'
     name: Autograding
     runs-on: ubuntu-latest
     steps:
@@ -13,13 +15,55 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      # TODO build, publish to docker hub, deploy to k8s
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and publish images
+        timeout-minutes: 15
+        run: |
+          docker buildx build --push -t andreevaa/rsoi_cars_service:v1 -f src/cars_service/Dockerfile src/cars_service
+          docker buildx build --push -t andreevaa/rsoi_gate_way_service:v1 -f src/gate_way_service/Dockerfile src/gate_way_service
+          docker buildx build --push -t andreevaa/rsoi_rental_service:v1 -f src/rental_service/Dockerfile src/rental_service
+          docker buildx build --push -t andreevaa/rsoi_payment_service:v1 -f src/payment_service/Dockerfile src/payment_service
+
+      # - name: Deploy
+      #   run: |
+      #     mkdir -p ${{ github.workspace }}/.kube
+      #     echo '${{ secrets.KUBECONFIG}}' > ${{ github.workspace }}/.kube/config
+      #     cd k8s/charts/services
+      #     chmod g+r ${{ github.workspace }}/.kube/config
+      #     helm upgrade app . --kubeconfig ${{ github.workspace }}/.kube/config
+      #     kubectl get all
+      #     sleep 60
+
+      - name: Prepare Kube config
+        env:
+          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+          KUBECONFIG_CA_FILE: '${{ secrets.KUBECONFIG_CA }}'
+        run: |
+          echo "$KUBECONFIG_FILE" > ./kube.config 
+          echo "$KUBECONFIG_CA_FILE" > ./ca.pem 
+
+      - name: 'Deploy DB'
+        run: |
+          cd k8s/postgres-chart
+          helm upgrade db . --kubeconfig ../../kube.config
+          sleep 60
+
+      - name: 'Deploy App'
+        run: |
+          cd k8s/charts/services
+          helm upgrade app . --kubeconfig ../../../kube.config
+          sleep 60
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
         with:
-          collection: <variant>/postman/collection.json
-          environment: <variant>/postman/environment.json
+          collection: v3/postman/collection.json
+          environment: v3/postman/environment.json
           delayRequest: 100
           reporters: '[ "cli" ]'
 
@@ -29,10 +73,11 @@ jobs:
 
       - name: Github auto grader mark
         uses: Romanow/google-sheet-autograder-marker@v1.0
+        continue-on-error: true
         with:
           google_token: ${{secrets.GOOGLE_API_KEY}}
           sheet_id: "1xkgjUX6Qmk7rdJG-QPOToav-HWWtthJjnShIKnw3oIY"
-          homework_number: 5
+          homework_number: 4
           user_column: 'D'
           column_offset: 'F'
           mark: "'+"
