--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+        retryCountOnTaskFailure: 3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -28,16 +29,6 @@ jobs:
           docker buildx build --push -t andreevaa/rsoi_gate_way_service:v1 -f src/gate_way_service/Dockerfile src/gate_way_service
           docker buildx build --push -t andreevaa/rsoi_rental_service:v1 -f src/rental_service/Dockerfile src/rental_service
           docker buildx build --push -t andreevaa/rsoi_payment_service:v1 -f src/payment_service/Dockerfile src/payment_service
-
-      # - name: Deploy
-      #   run: |
-      #     mkdir -p ${{ github.workspace }}/.kube
-      #     echo '${{ secrets.KUBECONFIG}}' > ${{ github.workspace }}/.kube/config
-      #     cd k8s/charts/services
-      #     chmod g+r ${{ github.workspace }}/.kube/config
-      #     helm upgrade app . --kubeconfig ${{ github.workspace }}/.kube/config
-      #     kubectl get all
-      #     sleep 60
 
       - name: Prepare Kube config
         env:
