--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,10 +17,10 @@ jobs:
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
-        retryCountOnTaskFailure: 3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        retries: 3
 
       - name: Build and publish images
         timeout-minutes: 15
