--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+        timeout: 180
+        debug: true # Включить отладку
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
