--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -15,6 +15,12 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
+    - name: Set up Docker service
+      run: |
+        sudo systemctl daemon-reload
+        sudo systemctl restart docker
+        sudo systemctl status docker
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2 
         with:
