--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   OIDC_RSA_PRIVATE_KEY: ${{ secrets.OIDC_RSA_PRIVATE_KEY }}
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASS }}
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USER }}
+  DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASSWORD }}
   KUBE_URL: ${{ secrets.KUBE_URL }}
   KUBE_TOKEN: ${{ secrets.KUBE_TOKEN }}
 
