--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -22,8 +22,11 @@ jobs:
       - uses: docker/setup-buildx-action@v2
 
       - name: Build, publish to docker hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: |
-          echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USER" --password-stdin
           docker build --no-cache -t tichq/gateway ./src/gateway/ && docker push tichq/gateway:latest
           docker build --no-cache -t tichq/rating ./src/rating/ && docker push tichq/rating:latest
           docker build --no-cache -t tichq/library ./src/library/ && docker push tichq/library:latest
