--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build, publish to docker hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
         
       - name: Push to docker hub
