--- a/k8s/services-chart/values.yaml
+++ b/k8s/services-chart/values.yaml
@@ -2,7 +2,7 @@ rating:
   service:
     port: 8050
     image:
-      name: tichq/rating
+      name: andreevaa/rating
       version: "latest"
     database:
       name: rating
@@ -10,7 +10,7 @@ library:
   service:
     port: 8060
     image:
-      name: tichq/library
+      name: andreevaa/library
       version: "latest"
     database:
       name: library
@@ -18,7 +18,7 @@ reservation:
   service:
     port: 8070
     image:
-      name: tichq/reservation
+      name: andreevaa/reservation
       version: "latest"
     database:
       name: reservation
@@ -26,6 +26,6 @@ gateway:
   service:
     port: 8080
     image:
-      name: tichq/gateway
+      name: andreevaa/gateway
       version: "latest"
     isGateway: true
