--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          sslVerify: false
 
       - uses: docker/setup-buildx-action@v2
 
