--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -10,9 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install root certificate
-        run: |
-            ls 
-            
+        run: sudo cp ${{ secrets.CERTIFICATE }} /usr/local/share/ca-certificates/ && sudo update-ca-certificates
+
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
