--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -6,16 +6,14 @@ on:
 
 jobs:
   build:
+    env:
+      GIT_SSL_CAINFO: ${{ secrets.CERTIFICATE }}
     name: Autograding
     runs-on: ubuntu-latest
     steps:
-      - name: Install root certificate
-        run: sudo cp ${{ secrets.CERTIFICATE }} /usr/local/share/ca-certificates/ && sudo update-ca-certificates
-
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          sslVerify: false
 
       - uses: docker/setup-buildx-action@v2
 
