--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,7 +11,8 @@ jobs:
     name: Autograding
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
