--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -6,8 +6,6 @@ on:
 
 jobs:
   build:
-    env:
-      GIT_SSL_CAINFO: ${{ secrets.CERTIFICATE }}
     name: Autograding
     runs-on: ubuntu-latest
     steps:
@@ -15,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - uses: docker/setup-buildx-action@v2
 
