--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -54,7 +54,7 @@ jobs:
         run: npm install -g newman
 
       - name: Run API Tests
-        run: newman run v4/postman/collection.json --environment v4/postman/environment.json
+        run: newman run v4/postman/collection.json --environment v4/postman/environment.json --insecure
 
       - uses: education/autograding@v1
         id: autograder
