--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
 
+env:
+  OIDC_RSA_PRIVATE_KEY: ${{ secrets.OIDC_RSA_PRIVATE_KEY }}
+
 jobs:
   build:
     name: Autograding
