--- a/k8s/services-chart/charts/service-chart/templates/ingress.yaml
+++ b/k8s/services-chart/charts/service-chart/templates/ingress.yaml
@@ -1,27 +1,3 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: {{ .Chart.Name }}-ingress
-#   labels:
-#     app.kubernetes.io/name: {{ .Chart.Name }}-ingress
-#     app.kubernetes.io/version: "{{ .Values.service.image.version }}"
-#     app.kubernetes.io/component: application
-#     app.kubernetes.io/part-of: micro-services
-#     app.kubernetes.io/managed-by: helm
-# spec:
-# {{/*  ingressClassName: nginx*/}}
-#   rules:
-#     - host: {{ .Chart.Name }}.{{ .Values.domain }}
-#       http:
-#         paths:
-#           - path: /
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: {{ .Chart.Name }}
-#                 port:
-#                   number: {{ .Values.service.port }}
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -33,27 +9,51 @@ metadata:
     app.kubernetes.io/part-of: micro-services
     app.kubernetes.io/managed-by: helm
 spec:
-  ingressClassName: nginx
+{{/*  ingressClassName: nginx*/}}
   rules:
-    - http:
+    - host: {{ .Chart.Name }}.{{ .Values.domain }}
+      http:
         paths:
-          {{ if eq .Chart.Name "gateway" }}
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: {{ .Chart.Name }}
                 port:
-                  number: {{ .Values.service.port }}          
-          {{else }} 
-          - path: /{{ .Chart.Name }}
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ .Chart.Name }}
-                port:
-                  number: {{ .Values.service.port }}   
-          {{end}}
+                  number: {{ .Values.service.port }}
+
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: {{ .Chart.Name }}-ingress
+#   labels:
+#     app.kubernetes.io/name: {{ .Chart.Name }}-ingress
+#     app.kubernetes.io/version: "{{ .Values.service.image.version }}"
+#     app.kubernetes.io/component: application
+#     app.kubernetes.io/part-of: micro-services
+#     app.kubernetes.io/managed-by: helm
+# spec:
+#   ingressClassName: nginx
+#   rules:
+#     - http:
+#         paths:
+#           {{ if eq .Chart.Name "gateway" }}
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: {{ .Chart.Name }}
+#                 port:
+#                   number: {{ .Values.service.port }}          
+#           {{else }} 
+#           - path: /{{ .Chart.Name }}
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: {{ .Chart.Name }}
+#                 port:
+#                   number: {{ .Values.service.port }}   
+#           {{end}}
 
 
 
