--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -16,6 +16,10 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
+      - name: Build images
+        timeout-minutes: 10
+        run: docker-compose build
+
       - name: Build, publish to docker hub
         uses: docker/login-action@v2
         with:
