--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: 'Deploy k8s'
         run: |
-          helm install app ./myHelm --kubeconfig test.kubeconfig
+          helm upgrade app ./myHelm --kubeconfig test.kubeconfig
           sleep 60
 
       - name: Install Newman
